# iag_aob2b_streamlit

./: appels_offres.json  pyproject.toml
src/claude_code_gradio/: app.py
src/claude_code_streamlit/: app.py
src/claude_code_streamlit/pages/: page_dashboard.py  page_details.py  page_upload.py
src/iag_aob2b_streamlit/: main.py
src/iag_aob2b_streamlit/conf/: config.py  enums.py  fake_datas.json  referentiel_questions.yaml
src/iag_aob2b_streamlit/pages/: documents.py  menu.py  questions.py
src/iag_aob2b_streamlit/utils/: read_fake_data.py  streamlit_utils.py
