[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iag_aob2b_streamlit"
version = "0.1.0"
description = "Description de mon projet Python"
authors = [{ name="Ton Nom", email="ton@email.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.40.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
